ts_err.txt

D:\a_themduan\chuyendoireact\LAB-NamViet-SV-V1\nam-viet-server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
prisma/seeds/seed-hovtoi.ts(2,1): error TS6133: 'seedCustomers' is declared but its value is never read.

    at createTSError (D:\a_themduan\chuyendoireact\LAB-NamViet-SV-V1\nam-viet-server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (D:\a_themduan\chuyendoireact\LAB-NamViet-SV-V1\nam-viet-server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (D:\a_themduan\chuyendoireact\LAB-NamViet-SV-V1\nam-viet-server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (D:\a_themduan\chuyendoireact\LAB-NamViet-SV-V1\nam-viet-server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (D:\a_themduan\chuyendoireact\LAB-NamViet-SV-V1\nam-viet-server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (D:\a_themduan\chuyendoireact\LAB-NamViet-SV-V1\nam-viet-server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 6133 ]
}
